--- a/My-Techdegree-Project-1/index.html
+++ b/My-Techdegree-Project-1/index.html
@@ -10,8 +10,8 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Choolwe Banda</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Experience">Experience</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Experience</a></li>
         </ul>
     </div>
 
@@ -44,7 +44,7 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://wwww.chooolwe@aol.com" class="social Email">Email</a></li>
+        <li><a href="https://www.aol.com/" class="social Email">Email</a></li>
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/" class="social github">Github</a></li>
       </ul>
