--- a/My-Techdegree-Project-1/index.html
+++ b/My-Techdegree-Project-1/index.html
@@ -38,7 +38,7 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work as a front end web developer , once i finsh the treehouse techdegree. .</p>
       </div>
 
     </main>
